--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "ngx-bootstrap": "^3.0.0",
     "ngx-spinner": "^6.0.0",
+    "npm": "^6.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
